# DB-DAC

./: .env.example  Cargo.toml  Dockerfile.api  Dockerfile.console  Dockerfile.proxy  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: policies.json
console/: index.html  nginx.conf
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  main.rs  state.rs
crates/api/src/routes/: audit.rs  health.rs  mod.rs  policy_file.rs  rules.rs  secrets.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs  logger.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  main.rs
crates/cli/src/commands/: health.rs  mod.rs  rules.rs  secrets.rs  simulate.rs
crates/policy/: Cargo.toml
crates/policy/src/: engine.rs  lib.rs  rule.rs  types.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: main.rs  mongodb.rs  mssql.rs  mysql.rs  policy_loader.rs  postgres.rs  redis.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: cache.rs  client.rs  error.rs  lib.rs  types.rs
helm/ganji-dac/: Chart.yaml  values.yaml
helm/ganji-dac/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  console-deployment.yaml  console-service.yaml  ingress.yaml  namespace.yaml  proxy-deployment.yaml  proxy-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml
tests/: integration_test.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: Badge.tsx  Layout.tsx  Modal.tsx
web/src/pages/: AuditLogs.tsx  Dashboard.tsx  Rules.tsx  Secrets.tsx  Simulator.tsx
web/src/types/: index.ts
