[package]
name = "policy"
version = "0.1.0"
edition = "2021"

[lib]
name = "policy"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
