[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ganji-proxy"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
policy = { path = "../policy" }
audit = { path = "../audit" }
