[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

[lib]
name = "secrets"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
dashmap = { workspace = true }
